<resources>
    <string name="app_name">ElectricalApplianceStore</string>
    <string name="select_image">Select Image</string>
    <string name="types_of_goods_text_view">Виды товаров</string>
    <string name="payment_methods_text_view">Методы оплаты</string>
    <string name="goods_text_view">Товары</string>
    <string name="clients_text_view">Клиенты</string>
    <string name="reviews_text_view">Отзывы</string>
    <string name="suppliers_text_view">Поставщики</string>
    <string name="sale_text_view">На продаже</string>
    <string name="procurements_text_view">Закупка</string>
    <string name="orders_text_view">Заказы</string>
    <string name="carts_text_view">Корзина</string>
    <string name="delivery_text_view">Доставка</string>
    <string name="table">Таблицы</string>
    <string name="id">id</string>
    <string name="goods_id">goods id</string>
    <string name="quantity">quantity</string>
    <string name="order_id">order id</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="middle_name">middle name</string>
    <string name="discount">discount</string>
    <string name="address">address</string>
    <string name="delivered">delivered</string>
    <string name="date_time">date time</string>
    <string name="name">name</string>
    <string name="type_id">type id</string>
    <string name="quantity_in_stock">quantity in stock</string>
    <string name="description">description</string>
    <string name="client_id">client id</string>
    <string name="payment_method">payment method</string>
    <string name="paid">paid</string>
    <string name="supplier_id">supplier id</string>
    <string name="price">price</string>
    <string name="review_text">review text</string>
    <string name="rating">rating</string>
    <string name="phone">phone</string>
    <string name="order">Order</string>
    <string name="hint_quantity_edit_text">Enter quantity</string>
    <string name="goods">Goods</string>
    <string name="add_data_button">Добавить в таблицу</string>
    <string name="hint_first_name_edit_text">Enter first name</string>
    <string name="hint_last_name_edit_text">Enter last name</string>
    <string name="hint_middle_name_edit_text">Enter middle name</string>
    <string name="hint_discount_edit_text">Enter discount</string>
    <string name="delete_item_menu">Delete</string>
    <string name="hint_login_edit_text">Enter your login</string>
    <string name="hint_password_edit_text">Enter your password</string>
    <string name="sign_button">Sign</string>
    <string name="toggleTextView">toggle</string>
    <string name="signUpButton">SignUp</string>
    <string name="toggle_sign_in">Tap To Sign In</string>
    <string name="sign_in_button">Sign In</string>
    <string name="toggle_sign_up">Tap To Sign Up</string>
    <string name="hint_address_edit_text">Enter your address</string>
    <string name="hint_date_time_edit_text">Enter datetime</string>
    <string name="hint_name_edit_text">Enter your name</string>
    <string name="hint_quantity_in_stock_edit_text">Enter quantity in stock</string>
    <string name="hint_description_edit_text">Enter description</string>
    <string name="hint_price_edit_text">Enter price</string>
    <string name="hint_review_text_edit_text">Enter review</string>
    <string name="hint_rating_edit_text">Enter rating</string>
    <string name="hint_phone_edit_text">Enter phone</string>
</resources>
