<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:text="@string/table"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/typesOfGoodsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:onClick="goToTypesOfGoods"
            android:text="@string/types_of_goods_text_view"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/paymentMethodsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:clickable="true"
            android:onClick="goToPaymentMethods"
            android:text="@string/payment_methods_text_view"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/goodsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:onClick="goToGoods"
            android:text="@string/goods_text_view"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/clientsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:onClick="goToClients"
            android:text="@string/clients_text_view"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/reviewsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:onClick="goToReviews"
            android:text="@string/reviews_text_view"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/suppliersTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:onClick="goToSuppliers"
            android:text="@string/suppliers_text_view"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/saleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:onClick="goToSale"
            android:text="@string/sale_text_view"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/procurementsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:onClick="goToProcurements"
            android:text="@string/procurements_text_view"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ordersTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:onClick="goToOrders"
            android:text="@string/orders_text_view"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cartsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:onClick="goToCarts"
            android:text="@string/carts_text_view"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/deliveryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:onClick="goToDelivery"
            android:text="@string/delivery_text_view"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>

